<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/common_top_bar"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/common_padding_middle"
                  android:orientation="vertical">

        <TextView android:text="@string/login_hint_prompt_info"
                  android:textColor="@color/grey_text"
                  android:gravity="center_horizontal"
                  android:layout_width="match_parent"
                  android:layout_marginTop="@dimen/common_margin_top"
                  android:textSize="@dimen/common_style_size"
                  style="@style/CommonTextView_Content"/>

        <View style="@style/line"
              android:layout_marginTop="30dp"/>
        <RelativeLayout style="@style/login_relative">

            <ImageView android:id="@+id/image1"
                       android:src="@drawable/login_user"
                       style="@style/login_image"/>

            <EditText android:id="@+id/user_name"
                      android:layout_width="match_parent"
                      android:layout_toRightOf="@+id/image1"
                      android:layout_marginLeft="@dimen/common_margin"
                      android:layout_centerInParent="true"
                      android:hint="@string/login_hint_name"
                      style="@style/CommonTextView_Content"/>

        </RelativeLayout>

        <View style="@style/line"/>>

        <RelativeLayout style="@style/login_relative">

            <ImageView android:id="@+id/image2"
                       android:src="@drawable/login_address"
                       style="@style/login_image"/>


            <EditText android:id="@+id/user_shop_address"
                      android:layout_width="match_parent"
                      android:layout_centerVertical="true"
                      android:layout_toRightOf="@+id/image2"
                      android:layout_marginLeft="@dimen/common_margin"
                      android:hint="@string/login_hint_address"
                      android:layout_toLeftOf="@+id/login_code_btn"
                      style="@style/CommonTextView_Content"/>

        </RelativeLayout>
        <View style="@style/line"/>


    </LinearLayout>


    <Button android:id="@+id/login_btn"
            style="@style/CommonButtonMargin"
            android:layout_height="@dimen/common_button_height"
            android:text="@string/login_continue"
            />

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:visibility="gone"
                  android:layout_marginTop="@dimen/common_padding"
                  android:layout_marginLeft="@dimen/common_padding"
                  android:orientation="horizontal">

        <TextView android:text="@string/login_agree"
                  android:textColor="@color/grey_text"
                  style="@style/CommonTextView_Content"/>

        <TextView android:id="@+id/login_user_deal"
                  android:text="@string/login_deal"
                  android:layout_marginLeft="@dimen/common_margin_top"
                  android:textColor="@color/common_text_color_selector"
                  style="@style/CommonTextView_Content"/>


    </LinearLayout>


</LinearLayout>