<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/confirm_dialog_height"
                android:background="@drawable/custom_dialog_bg"
        >

    <TextView
            android:id="@+id/dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/confirm_title_height"
            android:textSize="@dimen/confirm_dialog_title"
            android:textColor="@color/bg_color"
            android:gravity="center"
            android:text="@string/confirm_prompt"/>

    <View android:id="@+id/confirm_line"
          android:layout_width="fill_parent"
          android:layout_height="1dp"
          android:layout_below="@+id/dialog_title"
          android:background="@color/bg_color"/>

    <LinearLayout android:id="@+id/confirm_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_alignParentBottom="true"
                  android:weightSum="2">

        <TextView
                android:id="@+id/confirm_ok"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/confirm_button_height"
                android:textSize="@dimen/confirm_dialog_text"
                android:textColor="@color/grey"
                android:gravity="center"
                android:background="@drawable/dialog_btn_left_selector"
                android:text="@string/confirm_ok"/>

        <View android:id="@+id/confirm_line_center"
              android:layout_width="0.5dp"
              android:layout_height="fill_parent"
              android:layout_above="@+id/confirm_layout"
              android:background="@color/alpha_grey"/>

        <TextView
                android:id="@+id/confirm_cancel"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/confirm_button_height"
                android:textSize="@dimen/confirm_dialog_text"
                android:gravity="center"
                android:textColor="@color/grey"
                android:background="@drawable/dialog_btn_right_selector"
                android:text="@string/confirm_cancel"/>

    </LinearLayout>

    <View android:id="@+id/confirm_line_bottom"
          android:layout_width="fill_parent"
          android:layout_height="0.5dp"
          android:layout_above="@+id/confirm_layout"
          android:background="@color/alpha_grey"/>


    <TextView
            android:id="@+id/confirm_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="@dimen/confirm_dialog_content"
            android:paddingLeft="@dimen/common_padding_middle"
            android:paddingRight="@dimen/common_padding_middle"
            android:textColor="@color/grey"
            android:layout_below="@+id/confirm_line"
            android:layout_above="@+id/confirm_line_bottom"
            android:gravity="center"
            android:text="content"/>


</RelativeLayout>
